# p1-starting-an-api-jtayl647

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
