[tool.poetry]
name = "p1-starting-an-api-jtayl647"
version = "0.1.0"
description = ""
authors = ["Jaimee Student <jaimee.taylor@student.uq.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
